--- a/elections/elections.html
+++ b/elections/elections.html
@@ -1229,10 +1229,10 @@
 			<p>
 				Encuentra en los siguientes artículos y videos información pormenorizada sobre la mecánica del proceso electoral en Estados Unidos, la historia de su sistema político y el contexto para comprender la cerrada contienda de este 2016.
 			</p>
-			<h3>EN VIDEO</h3>
+			<h3 class="break">EN VIDEO</h3>
 			<iframe id="iframe" width="560" height="315" src="https://www.youtube.com/embed/e9waJKOMxpI" frameborder="0" allowfullscreen></iframe>
 			<div class="grid clearfix contexto"></div>
-			<h2 class="secc_title">LONGREADS</h2>
+			<h3 class="break">LECTURAS</h3>
 			<ul class="notas_nt">
 				<li class="clearfix">
 					<a href="https://medium.com/panorama-noticieros/las-otras-elecciones-5f78c60cfa99#.30uhe0usz">
@@ -1268,7 +1268,7 @@
 				</li>
 			</ul>	
 
-			<h2 class="secc_title">NOTAS CORTAS</h2>
+			<h3 class="break">NOTAS CORTAS</h3>
 			<ul class="notas_nt">
 				
 				<!-- 1 -->
