--- a/elections/elections.html
+++ b/elections/elections.html
@@ -26,7 +26,7 @@
 	<div class="overscreen">
 		<div class="rotate">
 			<img src="images/rotate.png">
-			<p>Lorem ipsum dolor sit amet consectetur adiscplicing elit</p>
+			<p>Rota tu dispositivo móvil</p>
 		</div>
 	</div>
 	<article>
