--- a/elections/elections.html
+++ b/elections/elections.html
@@ -23,12 +23,12 @@
 	<!--[if lt IE 9]>
 		<p class="chromeframe">Estás usando una versión <strong>vieja</strong> de tu explorador. Por favor <a href="http://browsehappy.com/" target="_blank"> actualiza tu explorador</a> para tener una experiencia completa.</p>
 	<![endif]-->
-	<div class="overscreen">
+	<!-- <div class="overscreen">
 		<div class="rotate">
 			<img src="images/rotate.png">
 			<p>Lorem ipsum dolor sit amet consectetur adiscplicing elit</p>
 		</div>
-	</div>
+	</div> -->
 	<article>
 		<header class="visual">
 			<a href="http://noticieros.televisa.com/" target="new"><img src="images/noti.png"></a>
