--- a/elections/elections.html
+++ b/elections/elections.html
@@ -70,10 +70,15 @@
 		<section>
 			<nav id="scene" class="share">
 				<ins>COMPARTE<br><br></ins>
-				<a class="fb" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=','Compartir en Facebook','width=600,height=400')"></a>
-				<a class="tw" onclick="window.open('https://twitter.com/intent/tweet?url= &text=','Compartir en Twitter','width=600,height=400')"></a>
-				<a class="wp" href="whatsapp://send" data-text="Lorem ipsum dolor sit amet" data-href=""></a>
+				<a class="fb" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=http://noticieros.televisa.com/infografia/elecciones-estados-unidos/','Compartir en Facebook','width=600,height=400')"></a>
+				<a class="tw" onclick="window.open('https://twitter.com/intent/tweet?url=http://noticieros.televisa.com/infografia/elecciones-estados-unidos/&text=#EleccionesEU','Compartir en Twitter','width=600,height=400')"></a>
+				<a class="wp" href="whatsapp://send" data-text="Elecciones Estados Unidos http://noticieros.televisa.com/infografia/elecciones-estados-unidos/" data-href=""></a>
 			</nav>
+
+			<div class="akamai">
+				<iframe id="akamaiPlayer"src="http://amp.televisa.com/embed/embed_jw.php?id=163226" frameborder="0" scrolling="no" class="vid_black" style="overflow:hidden;" autostart="0" autoplay="0" allowfullscreen></iframe>
+			</div>
+
 			<h1>ELECCIONES EUA 2016</h1>
 			<p>
 				Este 8 de noviembre del 2016 se llevan a cabo las elecciones presidenciales en Estados Unidos. La <strong>demócrata Hillary Clinton</strong> y el <strong>republicano Donald Trump</strong> son los principales candidatos en esta reñida contienda. No se trata de un único evento, la Unión Americana tiene en realidad 50 procesos electorales, uno por cada estado, y otro más en el Distrito de Columbia.
