--- a/elections/elections.html
+++ b/elections/elections.html
@@ -76,7 +76,7 @@
 			</nav>
 
 			<div class="akamai">
-				<iframe id="akamaiPlayer"src="http://amp.televisa.com/embed/embed_jw.php?id=163226" frameborder="0" scrolling="no" class="vid_black" style="overflow:hidden;width: 100%; height: 400px;" autostart="0" autoplay="0" allowfullscreen></iframe>
+				<iframe id="akamaiPlayer"src="http://amp.televisa.com/embed/embed_jw.php?id=163226" frameborder="0" scrolling="no" class="vid_black" style="overflow:hidden; position: absolute; width: 100%; height: 100%;" autostart="0" autoplay="0" allowfullscreen></iframe>
 			</div>
 
 			<h1>ELECCIONES EUA 2016</h1>
