--- a/elections/elections.html
+++ b/elections/elections.html
@@ -13,11 +13,11 @@
 	<link rel="stylesheet" type="text/css" href="style-elections.css">
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     <script type="text/javascript" src="js/functions.js"></script>
-	<meta property="og:url" content="" />
+	<meta property="og:url" content="http://noticieros.televisa.com/infografia/elecciones-estados-unidos/" />
 	<meta property="og:type" content="article" />
 	<meta property="og:title" content="Elecciones EE UU 2016" />
 	<meta property="og:description" content="" />
-	<meta property="og:image" content="" />
+	<meta property="og:image" content="http://noticieros.televisa.com/infografia/elecciones-estados-unidos/images/portada.jpg" />
 </head>
 <body>
 	<!--[if lt IE 9]>
