--- a/elections/elections.html
+++ b/elections/elections.html
@@ -70,7 +70,7 @@
 			<div class="versus clearfix">
 				<p><strong>538</strong><br>VOTOS ELECTORALES<br>FALTANTES</p>
 				<div class="clearfix middle hc">
-					<img src="images/hc.svg">
+					<img src="images/hc.png">
 					<div class="stats">
 						<h5>0%</h5>
 						<span><strong>0</strong> VOTOS ELECTORALES</span>
@@ -79,7 +79,7 @@
 					<div class="barra"><div></div></div>
 				</div>
 				<div class="clearfix middle dt">
-					<img src="images/dt.svg">
+					<img src="images/dt.png">
 					<div class="stats">
 						<h5>0%</h5>
 						<span><strong>0</strong> VOTOS ELECTORALES</span>
