elecciones tag manager

--- a/elections/elections.html
+++ b/elections/elections.html
@@ -10,7 +10,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1, minimum-scale=1, height=device-height">
 	<meta http-equiv="cleartype" content="on">
 	<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:400,700|Merriweather:300,700|Roboto:900" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="style-elections.css">
+	<link rel="stylesheet" type="text/css" href="style-elections.css?102030">
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     <script type="text/javascript" src="js/functions.js"></script>
 	<meta property="og:url" content="http://noticieros.televisa.com/infografia/elecciones-estados-unidos/" />
@@ -29,6 +29,13 @@
 			<p>Rota tu dispositivo móvil</p>
 		</div>
 	</div> -->
+	<!-- Google Tag Manager -->
+	<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MR3DS5" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<script>
+		(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','tckDataLayer','GTM-MR3DS5');
+	</script>
+	<!-- End Google Tag Manager -->
+
 	<article>
 		<header class="visual">
 			<a href="http://noticieros.televisa.com/" target="new"><img src="images/noti.png"></a>
