--- a/elections/elections.html
+++ b/elections/elections.html
@@ -47,8 +47,8 @@
 			<nav id="scene" class="share">
 				<ins>COMPARTE<br><br></ins>
 				<a class="fb" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=http://noticieros.televisa.com/infografia/elecciones-estados-unidos/','Compartir en Facebook','width=600,height=400')"></a>
-				<a class="tw" onclick="window.open('https://twitter.com/intent/tweet?url=http://noticieros.televisa.com/infografia/elecciones-estados-unidos/&text=#EleccionesEU','Compartir en Twitter','width=600,height=400')"></a>
-				<a class="wp" href="whatsapp://send" data-text="Elecciones Estados Unidos http://noticieros.televisa.com/infografia/elecciones-estados-unidos/" data-href=""></a>
+				<a class="tw" onclick="window.open('https://twitter.com/intent/tweet?url=http://noticieros.televisa.com/infografia/elecciones-estados-unidos/&hashtags=EleccionesEU','Compartir en Twitter','width=600,height=400')"></a>
+				<a class="wp" href="whatsapp://send" data-text="#entucaratrump http://www.entucaratrump.com" data-href=""></a>
 			</nav>
 
 			<div class="akamai">
