--- a/elections/elections.html
+++ b/elections/elections.html
@@ -72,7 +72,7 @@
 				La siguiente gráfica muestra el número de votos electorales que ha obtenido cada candidato hasta el momento. Entre más cerca estén las barras rojas y azul del número 270, más cerca está el candidato de obtener la presidencia de Estados Unidos.
 			</p>
 			<p class="rules">
-				Da clic sobre cada barra, o bien, sobre el espacio gris, para obtener información detallada sobre los estados y votos electorales obtenidos por cada candidato hasta el momento. El porcentaje representa qué tan cerca están de obtener el número de votos electorales necesarios para ser presidente. El 100% son 270 votos electorales. Un candidato puede obtener más del 100% de votos.
+				Da clic sobre cada barra para obtener información detallada sobre los estados y votos electorales obtenidos por cada candidato hasta el momento. El porcentaje representa qué tan cerca están de obtener el número de votos electorales necesarios para ser presidente. El 100% son 270 votos electorales. Un candidato puede obtener más del 100% de votos.
 			</p>
 			<div class="versus clearfix">
 				<p><strong>538</strong><br>VOTOS ELECTORALES<br>FALTANTES</p>
