--- a/elections/elections.html
+++ b/elections/elections.html
@@ -9,7 +9,7 @@
 	<link rel="shortcut icon" href="favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1, minimum-scale=1, height=device-height">
 	<meta http-equiv="cleartype" content="on">
-	<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:400,700|Merriweather:300,700|Roboto:900" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:400,700|Merriweather:300,700|Roboto:900|Montserrat:400,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style-elections.css?102030">
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     <script type="text/javascript" src="js/functions.js"></script>
