--- a/elections1/elections.html
+++ b/elections1/elections.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Elecciones EE UU 2016</title>
 	<meta name="description" content=""/>
+	<meta name="theme-color" content="#0078c0" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<link rel="shortcut icon" href="favicon.ico">
@@ -1225,6 +1226,8 @@
 				  		$('.grid.breaking').append('<div class="grid_item breaking clearfix" data="'+v_id+'"><img src="'+imagen+'" /></div>');
 			  		}
 			  	});
+
+			  	$().each
 			  },
 			  dataType: 'json'
 			});
